Determined and explained parameters

--- a/NB01-DataCollection.ipynb
+++ b/NB01-DataCollection.ipynb
@@ -46,9 +46,11 @@
    "id": "4f6972e4",
    "metadata": {},
    "source": [
-    "### TODO\n",
+    "I will compare London to four other capital cities in the general geographic area: Dublin, Paris, Brussels, and Amsterdam. All of these cities are within about 350 miles of London and have a relatively similar climate. As far as I am aware, these cities do not have the same reputation for rain as London.\n",
     "\n",
-    "Justify Your Choices: In a Markdown cell, concisely explain why you chose your specific cities, time period, and variables. This justification is crucial. (Max 250 words)"
+    "I will compare the raininess of these cities for the year 2024 as this is recent data which spans all seasons throughout the year. \n",
+    "\n",
+    "I will use rain sum (millimeters of rain in a day) and precipitation hours (number of hours it rained in a day). These two measurements will account for two possible measures of raininess: actual volume of rainfall and amount of time it rains. I will compare both with the other cities to see if London is truly ranier. If it is only rainier by one measurement, that may point to how the general public percieves raininess and, by extension, how London got its reputation."
    ]
   },
   {
@@ -58,7 +60,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Access open-meteo, collect data"
+    "url_endpoint = \"https://archive-api.open-meteo.com/v1/archive\"\n",
+    "london_params = {\n",
+    "    \"latitude\": 51.5085,\n",
+    "    \"longitude\": -0.1257,\n",
+    "\t\"start_date\": \"2024-01-01\",\n",
+    "\t\"end_date\": \"2024-12-31\",\n",
+    "\t\"daily\": \"rain_sum, precipitation_hours\", \n",
+    "    \"timezone\": \"Europe/London\"\n",
+    "}\n",
+    "paris_params = {\n",
+    "    \"latitude\": 48.8534,\n",
+    "    \"longitude\": 2.3488,\n",
+    "\t\"start_date\": \"2024-01-01\",\n",
+    "\t\"end_date\": \"2024-12-31\",\n",
+    "\t\"daily\": \"rain_sum, precipitation_hours\", \n",
+    "    \"timezone\": \"Europe/Berlin\"\n",
+    "}\n",
+    "brussels_params = {\n",
+    "    \"latitude\": 50.8505,\n",
+    "    \"longitude\": 4.3488,\n",
+    "\t\"start_date\": \"2024-01-01\",\n",
+    "\t\"end_date\": \"2024-12-31\",\n",
+    "\t\"daily\": \"rain_sum, precipitation_hours\", \n",
+    "    \"timezone\": \"Europe/Berlin\"\n",
+    "}\n",
+    "amsterdam_params = {\n",
+    "    \"latitude\": 52.374,\n",
+    "    \"longitude\": 4.8897,\n",
+    "\t\"start_date\": \"2024-01-01\",\n",
+    "\t\"end_date\": \"2024-12-31\",\n",
+    "\t\"daily\": \"rain_sum, precipitation_hours\", \n",
+    "    \"timezone\": \"Europe/Berlin\"\n",
+    "}\n",
+    "dublin_params = {\n",
+    "    \"latitude\": 53.3331,\n",
+    "    \"longitude\": -6.2489,\n",
+    "\t\"start_date\": \"2024-01-01\",\n",
+    "\t\"end_date\": \"2024-12-31\",\n",
+    "\t\"daily\": \"rain_sum, precipitation_hours\", \n",
+    "    \"timezone\": \"Europe/London\"\n",
+    "}\n"
    ]
   },
   {
