--- a/NB01-DataCollection.ipynb
+++ b/NB01-DataCollection.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "15cd1e62",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f252f659",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
     "    \"longitude\": -0.1257,\n",
     "\t\"start_date\": \"2024-01-01\",\n",
     "\t\"end_date\": \"2024-12-31\",\n",
-    "\t\"daily\": \"rain_sum, precipitation_hours\", \n",
+    "\t\"daily\": \"rain_sum,precipitation_hours\",\n",
     "    \"timezone\": \"Europe/London\"\n",
     "}\n",
     "paris_params = {\n",
@@ -74,7 +74,7 @@
     "    \"longitude\": 2.3488,\n",
     "\t\"start_date\": \"2024-01-01\",\n",
     "\t\"end_date\": \"2024-12-31\",\n",
-    "\t\"daily\": \"rain_sum, precipitation_hours\", \n",
+    "\t\"daily\": \"rain_sum,precipitation_hours\", \n",
     "    \"timezone\": \"Europe/Berlin\"\n",
     "}\n",
     "brussels_params = {\n",
@@ -82,7 +82,7 @@
     "    \"longitude\": 4.3488,\n",
     "\t\"start_date\": \"2024-01-01\",\n",
     "\t\"end_date\": \"2024-12-31\",\n",
-    "\t\"daily\": \"rain_sum, precipitation_hours\", \n",
+    "\t\"daily\": \"rain_sum,precipitation_hours\", \n",
     "    \"timezone\": \"Europe/Berlin\"\n",
     "}\n",
     "amsterdam_params = {\n",
@@ -90,7 +90,7 @@
     "    \"longitude\": 4.8897,\n",
     "\t\"start_date\": \"2024-01-01\",\n",
     "\t\"end_date\": \"2024-12-31\",\n",
-    "\t\"daily\": \"rain_sum, precipitation_hours\", \n",
+    "\t\"daily\": \"rain_sum,precipitation_hours\", \n",
     "    \"timezone\": \"Europe/Berlin\"\n",
     "}\n",
     "dublin_params = {\n",
@@ -98,9 +98,52 @@
     "    \"longitude\": -6.2489,\n",
     "\t\"start_date\": \"2024-01-01\",\n",
     "\t\"end_date\": \"2024-12-31\",\n",
-    "\t\"daily\": \"rain_sum, precipitation_hours\", \n",
+    "\t\"daily\": \"rain_sum,precipitation_hours\", \n",
     "    \"timezone\": \"Europe/London\"\n",
     "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b5bf5010",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "London: Success\n",
+      "Paris: Success\n",
+      "Brussels: Success\n",
+      "Amsterdam: Success\n",
+      "Dublin: Success\n"
+     ]
+    }
+   ],
+   "source": [
+    "response_london = requests.get(url_endpoint, params=london_params)\n",
+    "response_paris = requests.get(url_endpoint, params=paris_params)\n",
+    "response_brussels = requests.get(url_endpoint, params=brussels_params)\n",
+    "response_amsterdam = requests.get(url_endpoint, params=amsterdam_params)\n",
+    "response_dublin = requests.get(url_endpoint, params=dublin_params)\n",
+    "\n",
+    "cities = [[\"London\", response_london], [\"Paris\", response_paris], [\"Brussels\", response_brussels], [\"Amsterdam\", response_amsterdam], [\"Dublin\", response_dublin]]\n",
+    "for city in cities:\n",
+    "    if city[1].status_code == 200:\n",
+    "        print(f\"{city[0]}: Success\")\n",
+    "    else:\n",
+    "        print(f\"{city[0]}: Failure! Status code: {city[1].status_code}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "deac4250",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Save as JSON files"
    ]
   },
   {
