gitignore, save json files

--- a/NB01 - Data Collection.ipynb
+++ b/NB01 - Data Collection.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "15cd1e62",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f252f659",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b5bf5010",
    "metadata": {},
    "outputs": [
@@ -113,11 +113,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "London: Success\n",
-      "Paris: Success\n",
-      "Brussels: Success\n",
-      "Amsterdam: Success\n",
-      "Dublin: Success\n"
+      "london: Success\n",
+      "paris: Success\n",
+      "brussels: Success\n",
+      "amsterdam: Success\n",
+      "dublin: Success\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
     "response_amsterdam = requests.get(url_endpoint, params=amsterdam_params)\n",
     "response_dublin = requests.get(url_endpoint, params=dublin_params)\n",
     "\n",
-    "cities = [[\"London\", response_london], [\"Paris\", response_paris], [\"Brussels\", response_brussels], [\"Amsterdam\", response_amsterdam], [\"Dublin\", response_dublin]]\n",
+    "cities = [[\"london\", response_london], [\"paris\", response_paris], [\"brussels\", response_brussels], [\"amsterdam\", response_amsterdam], [\"dublin\", response_dublin]]\n",
     "for city in cities:\n",
     "    if city[1].status_code == 200:\n",
     "        print(f\"{city[0]}: Success\")\n",
@@ -138,12 +138,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "deac4250",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw data saved to london_2024_raw.json\n",
+      "Raw data saved to paris_2024_raw.json\n",
+      "Raw data saved to brussels_2024_raw.json\n",
+      "Raw data saved to amsterdam_2024_raw.json\n",
+      "Raw data saved to dublin_2024_raw.json\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Save as JSON files"
+    "raw_data_london = response_london.json()\n",
+    "raw_data_paris = response_paris.json()\n",
+    "raw_data_brussels = response_brussels.json()\n",
+    "raw_data_amsterdam = response_amsterdam.json()\n",
+    "raw_data_dublin = response_dublin.json()\n",
+    "\n",
+    "file_path = \"london_2024_raw.json\"\n",
+    "with open(file_path, 'w', encoding='utf-8') as f:\n",
+    "   json.dump(raw_data_london, f, indent=4)\n",
+    "print(f\"Raw data saved to {file_path}\")\n",
+    "\n",
+    "file_path = \"paris_2024_raw.json\"\n",
+    "with open(file_path, 'w', encoding='utf-8') as f:\n",
+    "   json.dump(raw_data_paris, f, indent=4)\n",
+    "print(f\"Raw data saved to {file_path}\")\n",
+    "\n",
+    "file_path = \"brussels_2024_raw.json\"\n",
+    "with open(file_path, 'w', encoding='utf-8') as f:\n",
+    "   json.dump(raw_data_brussels, f, indent=4)\n",
+    "print(f\"Raw data saved to {file_path}\")\n",
+    "\n",
+    "file_path = \"amsterdam_2024_raw.json\"\n",
+    "with open(file_path, 'w', encoding='utf-8') as f:\n",
+    "   json.dump(raw_data_amsterdam, f, indent=4)\n",
+    "print(f\"Raw data saved to {file_path}\")\n",
+    "\n",
+    "file_path = \"dublin_2024_raw.json\"\n",
+    "with open(file_path, 'w', encoding='utf-8') as f:\n",
+    "   json.dump(raw_data_dublin, f, indent=4)\n",
+    "print(f\"Raw data saved to {file_path}\")"
    ]
   },
   {
@@ -178,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7076c311",
    "metadata": {},
    "outputs": [],
