pandas df work, save final csv

--- a/NB01 - Data Collection.ipynb
+++ b/NB01 - Data Collection.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "15cd1e62",
    "metadata": {},
    "outputs": [],
@@ -54,9 +54,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1dfa491d",
+   "metadata": {},
+   "source": [
+    "Start by setting the paramaters for which data to fetch for each city:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f252f659",
+   "execution_count": 22,
+   "id": "b0ce6461",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,24 +108,32 @@
     "\t\"end_date\": \"2024-12-31\",\n",
     "\t\"daily\": \"rain_sum,precipitation_hours\", \n",
     "    \"timezone\": \"Europe/London\"\n",
-    "}\n"
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86bc1f00",
+   "metadata": {},
+   "source": [
+    "Fetch the data and check if it was successful:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "b5bf5010",
+   "execution_count": 23,
+   "id": "25de2a4d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "london: Success\n",
-      "paris: Success\n",
-      "brussels: Success\n",
-      "amsterdam: Success\n",
-      "dublin: Success\n"
+      "London: Success\n",
+      "Paris: Success\n",
+      "Brussels: Success\n",
+      "Amsterdam: Success\n",
+      "Dublin: Success\n"
      ]
     }
    ],
@@ -128,7 +144,7 @@
     "response_amsterdam = requests.get(url_endpoint, params=amsterdam_params)\n",
     "response_dublin = requests.get(url_endpoint, params=dublin_params)\n",
     "\n",
-    "cities = [[\"london\", response_london], [\"paris\", response_paris], [\"brussels\", response_brussels], [\"amsterdam\", response_amsterdam], [\"dublin\", response_dublin]]\n",
+    "cities = [[\"London\", response_london], [\"Paris\", response_paris], [\"Brussels\", response_brussels], [\"Amsterdam\", response_amsterdam], [\"Dublin\", response_dublin]]\n",
     "for city in cities:\n",
     "    if city[1].status_code == 200:\n",
     "        print(f\"{city[0]}: Success\")\n",
@@ -137,54 +153,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "deac4250",
+   "cell_type": "markdown",
+   "id": "ea0775aa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Raw data saved to london_2024_raw.json\n",
-      "Raw data saved to paris_2024_raw.json\n",
-      "Raw data saved to brussels_2024_raw.json\n",
-      "Raw data saved to amsterdam_2024_raw.json\n",
-      "Raw data saved to dublin_2024_raw.json\n"
-     ]
-    }
-   ],
+   "source": [
+    "Store the raw data as a jsons:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "fa3a1594",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "raw_data_london = response_london.json()\n",
     "raw_data_paris = response_paris.json()\n",
     "raw_data_brussels = response_brussels.json()\n",
     "raw_data_amsterdam = response_amsterdam.json()\n",
-    "raw_data_dublin = response_dublin.json()\n",
-    "\n",
-    "file_path = \"london_2024_raw.json\"\n",
-    "with open(file_path, 'w', encoding='utf-8') as f:\n",
-    "   json.dump(raw_data_london, f, indent=4)\n",
-    "print(f\"Raw data saved to {file_path}\")\n",
-    "\n",
-    "file_path = \"paris_2024_raw.json\"\n",
-    "with open(file_path, 'w', encoding='utf-8') as f:\n",
-    "   json.dump(raw_data_paris, f, indent=4)\n",
-    "print(f\"Raw data saved to {file_path}\")\n",
-    "\n",
-    "file_path = \"brussels_2024_raw.json\"\n",
-    "with open(file_path, 'w', encoding='utf-8') as f:\n",
-    "   json.dump(raw_data_brussels, f, indent=4)\n",
-    "print(f\"Raw data saved to {file_path}\")\n",
-    "\n",
-    "file_path = \"amsterdam_2024_raw.json\"\n",
-    "with open(file_path, 'w', encoding='utf-8') as f:\n",
-    "   json.dump(raw_data_amsterdam, f, indent=4)\n",
-    "print(f\"Raw data saved to {file_path}\")\n",
-    "\n",
-    "file_path = \"dublin_2024_raw.json\"\n",
-    "with open(file_path, 'w', encoding='utf-8') as f:\n",
-    "   json.dump(raw_data_dublin, f, indent=4)\n",
-    "print(f\"Raw data saved to {file_path}\")"
+    "raw_data_dublin = response_dublin.json()"
    ]
   },
   {
@@ -196,13 +183,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2180cc76",
+   "metadata": {},
+   "source": [
+    "Convert each json to a pandas dataframe:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "f8e4652d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert to df, clean up"
+    "df_london = pd.DataFrame(raw_data_london['daily'])\n",
+    "df_paris = pd.DataFrame(raw_data_paris['daily'])\n",
+    "df_brussels = pd.DataFrame(raw_data_brussels['daily'])\n",
+    "df_amsterdam = pd.DataFrame(raw_data_amsterdam['daily'])\n",
+    "df_dublin = pd.DataFrame(raw_data_dublin['daily'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "093f7bc6",
+   "metadata": {},
+   "source": [
+    "Add a column to each dataframe specifying the city:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "07f326df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_london['city'] = \"london\"\n",
+    "df_paris['city'] = \"paris\"\n",
+    "df_brussels['city'] = \"brussels\"\n",
+    "df_amsterdam['city'] = \"amsterdam\"\n",
+    "df_dublin['city'] = \"dublin\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e60b8a72",
+   "metadata": {},
+   "source": [
+    "Combine the dataframes into one and reset the index:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "96680d19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df_london, df_paris, df_brussels, df_amsterdam, df_dublin]).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "1ca00f41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['time'] = pd.to_datetime(df['time'], format='ISO8601')"
    ]
   },
   {
@@ -219,13 +268,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "7076c311",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clean data saved to rain_data_2024.csv\n"
+     ]
+    }
+   ],
    "source": [
-    "# Save as a csv"
+    "csv_path = \"rain_data_2024.csv\"\n",
+    "df.to_csv(csv_path, index=True)\n",
+    "print(f\"Clean data saved to {csv_path}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "061d0abe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
