rainy day count, begin nb02

--- a/NB01 - Data Collection.ipynb
+++ b/NB01 - Data Collection.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "15cd1e62",
    "metadata": {},
    "outputs": [],
@@ -207,16 +207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "07f326df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_london['city'] = \"london\"\n",
-    "df_paris['city'] = \"paris\"\n",
-    "df_brussels['city'] = \"brussels\"\n",
-    "df_amsterdam['city'] = \"amsterdam\"\n",
-    "df_dublin['city'] = \"dublin\""
+    "df_london['city'] = \"London\"\n",
+    "df_paris['city'] = \"Paris\"\n",
+    "df_brussels['city'] = \"Brussels\"\n",
+    "df_amsterdam['city'] = \"Amsterdam\"\n",
+    "df_dublin['city'] = \"Dublin\""
    ]
   },
   {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "96680d19",
    "metadata": {},
    "outputs": [],
@@ -247,12 +247,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "1ca00f41",
    "metadata": {},
    "outputs": [],
    "source": [
     "df['time'] = pd.to_datetime(df['time'], format='ISO8601')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa5ba5e1",
+   "metadata": {},
+   "source": [
+    "For initial analysis of the data I may want a count of \"rainy days.\" I will define a \"rainy day\" as having either at least 2.5 mm of rainfall or at least 4 hours of rain. \n",
+    "\n",
+    "Create a column which defines each day as \"rainy\" (True) or \"not rainy\" (False):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "dfd2b5d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>rain_sum</th>\n",
+       "      <th>precipitation_hours</th>\n",
+       "      <th>city</th>\n",
+       "      <th>rainy_day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>London</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-01-02</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>London</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-01-03</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>London</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-01-04</td>\n",
+       "      <td>27.7</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>London</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-01-05</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>London</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1825</th>\n",
+       "      <td>2024-12-27</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Dublin</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1826</th>\n",
+       "      <td>2024-12-28</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Dublin</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1827</th>\n",
+       "      <td>2024-12-29</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Dublin</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1828</th>\n",
+       "      <td>2024-12-30</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Dublin</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1829</th>\n",
+       "      <td>2024-12-31</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Dublin</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1830 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           time  rain_sum  precipitation_hours    city  rainy_day\n",
+       "0    2024-01-01       8.3                  8.0  London       True\n",
+       "1    2024-01-02       9.6                 11.0  London       True\n",
+       "2    2024-01-03       2.3                  6.0  London       True\n",
+       "3    2024-01-04      27.7                  8.0  London       True\n",
+       "4    2024-01-05       4.6                  8.0  London       True\n",
+       "...         ...       ...                  ...     ...        ...\n",
+       "1825 2024-12-27       0.0                  0.0  Dublin      False\n",
+       "1826 2024-12-28       0.0                  0.0  Dublin      False\n",
+       "1827 2024-12-29       0.0                  0.0  Dublin      False\n",
+       "1828 2024-12-30       0.0                  0.0  Dublin      False\n",
+       "1829 2024-12-31      12.2                 16.0  Dublin       True\n",
+       "\n",
+       "[1830 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rainy_day = []\n",
+    "for i in range(len(df)):\n",
+    "    if (df['rain_sum'][i] >= 2.5) or (df['precipitation_hours'][i] >= 4.0):\n",
+    "        rainy_day.append(True)\n",
+    "    else:\n",
+    "        rainy_day.append(False)\n",
+    "\n",
+    "df['rainy_day'] = rainy_day\n",
+    "df"
    ]
   },
   {
@@ -286,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "7f9b3fae",
    "metadata": {},
    "outputs": [
@@ -302,9 +474,17 @@
     "os.makedirs(\"data\", exist_ok = True)\n",
     "\n",
     "csv_path = os.path.join(\"data\", \"rain_data_2024.csv\")\n",
-    "df.to_csv(csv_path, index=True)\n",
+    "df.to_csv(csv_path, index=False)\n",
     "print(f\"Clean data saved to {csv_path}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b45a697e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
