README and other small edits

--- a/NB01 - Data Collection.ipynb
+++ b/NB01 - Data Collection.ipynb
@@ -39,11 +39,11 @@
    "id": "4f6972e4",
    "metadata": {},
    "source": [
-    "I will compare London to four other capital cities in the general geographic area: Dublin, Paris, Brussels, and Amsterdam. All of these cities are within about 350 miles of London and have a relatively similar climate. As far as I am aware, these cities do not have the same reputation for rain as London.\n",
+    "I will compare London to four other capital cities in the general geographic area: Dublin, Paris, Brussels, and Amsterdam. All of these cities are within about 350 miles of London and have a relatively similar climate. As far as I am aware, these cities do not have quite the same reputation for rain as London.\n",
     "\n",
     "I will compare the raininess of these cities for the year 2024 as this is recent data which spans all seasons throughout the year. \n",
     "\n",
-    "I will use rain sum (millimeters of rain in a day) and precipitation hours (number of hours it rained in a day). These two measurements will account for two possible measures of raininess: actual volume of rainfall and amount of time it rains. I will compare both with the other cities to see if London is truly ranier. If it is only rainier by one measurement, that may point to how the general public percieves raininess and, by extension, how London got its reputation."
+    "I will use rain sum (millimeters of rain in a day) and precipitation hours (number of hours it rained in a day). These two measurements will account for two possible measures of raininess: actual volume of rain fallen and amount of time it rains. I will compare both with the other cities to see if London is truly ranier. "
    ]
   },
   {
@@ -477,14 +477,6 @@
     "df.to_csv(csv_path, index=False)\n",
     "print(f\"Clean data saved to {csv_path}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b45a697e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
